recommit iw scripts